--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
         if (Math.random() > 0.5) boxes.push({w: 80, h: 400});
         for (let i = 300 + Math.random() * 200; i >= 0; i--) boxes.push({w: 10, h: 10});
         for (let i = 500 + Math.random() * 500; i >= 0; i--) boxes.push({w: 5, h: 5});
+        boxes.push({w: 400, h: 400});
 
         const now = performance.now();
-        const {w, h, fill} = potpack(boxes);
+        const {w, h, fill} = potpack(boxes, 400);
         const time = performance.now() - now;
 
         const canvas = document.getElementById('canvas');
